<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Zgłoś dziurę</string>
    <string-array name="damage_type_items">
		<item>Dziury w jezdni</item>
		<item>Dziury w chodniku</item>
		<item>Uszkodzony znak drogowy</item>
		<item>Graffiti</item>
		<item>Zalegający śnieg</item>
		<item>Oblodzenie</item>
		<item>Zalana ulica</item>
		<item>Dewastacja</item>
		<item>Zaśmiecenie</item>
		<item>Zwierzęta</item>
	</string-array>
    <string name="damage_type">Rodzaj szkody</string>
    <string name="get_gps">Pobierz pozycję GPS telefonu</string>
    <string name="get_info">Chcę otrzymywać informacje o zgłoszeniu</string>
    <string name="damage_desc">Opis szkody</string>
    <string name="submit">ZGŁOŚ</string>
    <string name="email">E-mail</string>
    <string name="damage_place">Wskaż na mapie miejsce wystąpienia szkody</string>
    <string name="street">Ulica</string>
    <string name="number">Numer</string>
    <string name="city">Miejscowość</string>
    <string name="zip_code">Kod pocztowy</string>
    <string name="photo_desc">Podpis zaznaczonego fragmentu zdjęcia</string>
    <string name="save">Zapisz</string>
    <string name="cancel">Anuluj</string>
    <string name="delete_photo">Usuń zdjęcie</string>
    <string name="take_next_photo">Zrób następne zdjęcie</string>
    <string name="delete_tags">Usuń tagi</string>
    <string name="description_hint">Dodatkowy opis zgłoszenia</string>
    
    
</resources>
