<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
	android:fadeScrollbars="true">
	
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/optionView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <android.gesture.GestureOverlayView
            android:id="@+id/gestures"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:gestureColor="#01212200"
            android:uncertainGestureColor="#00000000" />

        <CheckBox
            android:id="@+id/checkBoxGetGPS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:clickable="true"
            android:text="@string/get_gps" />

        <LinearLayout
            android:id="@+id/linLayMap"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone" >
            
		        <TextView
		            android:id="@+id/textViewDamagePlace"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/damage_place"
		            android:visibility="visible" />
		        
		
		
		
				<projekt.zespolowy.dziura.MyMapView
				    xmlns:android="http://schemas.android.com/apk/res/android"
				    android:id="@+id/mapView"
				    android:layout_width="fill_parent"
				    android:layout_height="200dp"
				    android:apiKey="02cGt3VILwNGjXzgaRaFFEmdoGOcAUuLhv3QdIw"
				    android:clickable="true"
				    android:visibility="visible" />

        </LinearLayout>

        <TextView
            android:id="@+id/textViewDamageType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/damage_type" />

        <Spinner
            android:id="@+id/spinnerDamageType"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/checkBoxGetInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:gravity="center"
            android:text="@string/get_info" />

        <EditText
            android:id="@+id/editTextMail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:visibility="gone" >
        </EditText>

        <EditText
            android:id="@+id/editText2"
            android:layout_width="fill_parent"
            android:layout_height="90dp"
            android:layout_weight="0.61"
            android:hint="@string/description_hint"
            android:inputType="textMultiLine" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/cameraView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical" >
    
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible" >

        <requestFocus />

        <LinearLayout
            android:id="@+id/linLayCameraPreview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible" >

            <SurfaceView
                android:id="@+id/surfaceViewCamera"
                android:layout_width="fill_parent"
                android:layout_height="250dp"
                android:paddingTop="10dp" />

            <ImageButton
                android:id="@+id/imageButton1"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:src="@android:drawable/ic_menu_camera" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linLayPhotos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone" >

            <projekt.zespolowy.dziura.MyImageView
                android:id="@+id/imageViewCamera"
                android:layout_width="fill_parent"
                android:layout_height="240dp"
                android:paddingBottom="5dp"
                android:src="@drawable/ic_launcher"
                android:visibility="visible" />

            <LinearLayout
                android:id="@+id/linLayTagDesc"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:visibility="gone" >

                <EditText
                    android:id="@+id/editText7"
                    android:layout_width="230dp"
                    android:layout_height="90dp"
                    android:layout_weight="0.18"
                    android:hint="@string/photo_desc"
                    android:inputType="textMultiLine"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:visibility="visible" />

                <LinearLayout
                    android:id="@+id/linearLayout6"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="visible" >

                    <Button
                        android:id="@+id/buttonSave"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/save"
                        android:visibility="visible" />

                    <Button
                        android:id="@+id/buttonCancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cancel"
                        android:visibility="visible" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="visible" >

                <Button
                    android:id="@+id/buttonDeletePhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:text="@string/delete_photo"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/buttonNextPhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:text="@string/take_next_photo"
                    android:visibility="visible" />
                
                <Button
                    android:id="@+id/buttonDeleteTags"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:text="@string/delete_tags"
                    android:visibility="gone" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linLayMinPhotos"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="gone" >

            <ImageView
                android:id="@+id/imageViewPhoto1"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_launcher"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/imageViewPhoto2"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_launcher"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/imageViewPhoto3"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_launcher"
                android:visibility="visible" />

        </LinearLayout>
    </LinearLayout>
    
    <android.gesture.GestureOverlayView
        android:id="@+id/gesturesCamera"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:gestureColor="#00000000"
        android:uncertainGestureColor="#00000000"
        android:visibility="visible" />
        
    </LinearLayout>
    
    
</LinearLayout>

</ScrollView>